--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>groupId</groupId>
     <artifactId>ecommerce-practice</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>module1</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
