--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.datafaker/datafaker -->
+        <dependency>
+            <groupId>net.datafaker</groupId>
+            <artifactId>datafaker</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
     
 </project>
